Fix layout to improve readability
Increase font size of informational text.
Add new flex containers to place the text adjacent to the game buttons.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Round&display=swap');
 
 body {
-    background-color:rgb(170, 196, 245);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Nova Round", sans-serif;
+    background-color:rgb(190, 213, 255);
+}
+
+p {
+    font-size: 24px;
+}
+
+.game-container {
+    display: flex;
+    gap: 50px;
 }
 
 .btn-container {
@@ -21,7 +34,7 @@ body {
 
 .rock-btn {
     border: 3px solid #f72585;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     color: #f72585;
 }
 
@@ -51,3 +64,4 @@ body {
     background-color: #4361ee;
     color: #ecebeb;
 }
+
